# Linux-Homework

./: .gitignore
homework-1/: CMakeLists.txt  main.cpp
homework-1/MathFunctionLib/: CMakeLists.txt  complex.cpp  complex.h
homework-2/: CMakeLists.txt  copy.cpp  main.cpp
homework-3/: CMakeLists.txt  shell.cpp
homework-3/shell_lib/: CMakeLists.txt  shell_lib.cpp  shell_lib.h
homework-4/: CMakeLists.txt  parallel.cpp
homework-4/parallel_matrix_lib/: CMakeLists.txt  parallel_matrix.cpp  parallel_matrix.h
homework-5/: CMakeLists.txt  scheduler.cpp
homework-5/scheduler_lib/: CMakeLists.txt  scheduler_lib.cpp  scheduler_lib.h
homework-6/: CMakeLists.txt  sighandler.cpp
homework-7/: CMakeLists.txt  buffer.h  consumer.cpp  producer.cpp
homework-7/buffer_lib/: CMakeLists.txt  buffer.cpp  buffer.h
homework-8/: CMakeLists.txt  pipe.cpp
http-server/: CMakeLists.txt  source.cpp
http-server/http_lib/: CMakeLists.txt  http.cpp  http.h
http-server/include/: error_handler.h  http.cpp  http.h
http-server/scheduler_lib/: scheduler_lib.cpp  scheduler_lib.h
